--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,7 @@
 addopts =
     --alluredir=allure-results
     -s
+    --log-date-format="%Y-%m-%d %H:%M:%S"
+    --log-format="%(asctime)s %(levelname)s %(message)s"
+    --log-cli-level=INFO
+
